@@ -1,3 +1,12 @@
+2001-11-08  Kevin Vandersloot <kfv101@psu.edu>
+
+	* proctable.c: handle removing processes properly
+
+2001-11-07  Kevin Vandersloot <kfv101@psu.edu>
+
+	* procdialogs.c: change renice dialog to conform to new
+	button ordering standard
+
 2001-11-07  Kevin Vandersloot <kfv101@psu.edu>
 
 	* prettytable.c: plug a memory leak
